			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04r: *********************************

BUG: (6/12/06, SMR) Adding busses to the waveform window shows the signals
     in random order (Bug #1113).
FIX: In WaveformWindow.findSelectedSignals(), sort the selected signals by name.

BUG: (6/12/06, SMR) "Back" button doesn't ascend schematic hierarchy (Bug #1112)
FIX: In EditWindow.downHierarchy() record the schematic cell in addToHistory().

BUG: (6/12/06, SMR) Multi-object properties crashes (Bug #1106).
FIX: In GetInfoMulti.applyActionPerformed(), must handle special controls.

BUG: (6/12/06, SMR) Copy and paste of arcs that are offset from their
     port center adjusts the arcs to the center (Bug #1117).
FIX: In Clipboard.java, remember offset and restore it.

BUG: (6/12/06, SMR) Pasting when editing down-in-place creates objects with
     original (incorrect) orientation (Bug #658).
FIX: In Clipboard.java, code added to adjust orientation of paste, copy, and
     cut when editing down-in-place.

************************* Version 8.04q: *********************************

IMP: (6/12/06, RK) Speed up NCC "hierarchical with size checking" by taking advantage of restricted schematics (Bugzilla# 1116)

IMP: (6/12/06, RK) Restrict schematics so it's easier to tell if all instances of a schematic cell have the same transistor sizes (Bugzilla# 1115)

BUG: (6/12/06, GVG) Drc doesn't display error properly (Bug #1114). This is the case of two overlapping
vias coming from two different cells.
FIX: In case of overlapping vias, the errorLog should only contain the rectangle that the 2 vias form.

BUG: (6/9/06, GVG) Inconsistent scale for angles in GetNodeInfo v/s GetMultiInfo (Bug#1109)
FIX: Values in GetInfoMulti.java were inconsistently scaled to integers.

BUG: (6/9/06, GVG) Bogus min area drc errors reported on dp_stageN{lay} (Bug #1111).